Bug 91273 - Crash when closing formula wizard (cancel or ok)
Summary: Crash when closing formula wizard (cancel or ok)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.0.0.0.alpha0+ Master
Hardware: Other All
: high major
Assignee: Julien Nabet
URL:
Whiteboard: target:5.0.0
Keywords: haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2015-05-13 22:53 UTC by Julien Nabet
Modified: 2015-08-15 14:25 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (10.52 KB, text/plain)
2015-05-13 22:53 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2015-05-13 22:53:28 UTC
Created attachment 115580 [details]
bt with debug symbols

On pc Debian x86-64 with master sources (enable-dbgutil) updated today, I got a "crash like" when doing:
1) open brand new file in Calc
2) click function wizard icon => dialog appears
3) click "cancel" button

It's not a real crash/segfault but I've got:
warn:legacy.osl:3927:1:vcl/source/window/window.cxx:271: Window ( 7VclVBox ()) with live children destroyed:  N7formula7ParaWinE ()
Window ( 7VclVBox ()) with live children destroyed:  N7formula7ParaWinE ()
Comment 1 Julien Nabet 2015-05-13 23:06:43 UTC
Michael: I took a look into vcl/README.lifecycle and thought http://opengrok.libreoffice.org/xref/core/formula/source/ui/dlg/formula.cxx#355 was ok for the disposeAndClear calls order.

Then I noticed that the abort was before the call to FormulaDlg_Impl::~FormulaDlg_Impl()

Any thought?
Comment 2 Julien Nabet 2015-05-13 23:41:28 UTC
Michael: I put tdf#90935 in See Also since I had the same logs on console.

Finally, here's a patch which prevents from the crash but I don't know if it's the good way or if it's just a wrong copycat from me of what you did on tdf#90935:
https://gerrit.libreoffice.org/#/c/15726
Comment 3 Commit Notification 2015-05-14 09:21:26 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=844b7287a4ccd8e3d5e458bb1dc6c52e71322b01

tdf#91273: Crash when closing formula wizard (cancel or ok)

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Michael Meeks 2015-05-15 08:34:38 UTC
Julien - looks awesome ! =) thanks so much for chasing this down !