tdf#91273: Crash when closing formula wizard (cancel or ok)

warn:legacy.osl:3927:1:vcl/source/window/window.cxx:271: Window ( 7VclVBox ()) with live children destroyed:  N7formula7ParaWinE ()
I took example from http://cgit.freedesktop.org/libreoffice/core/commit/?id=da49275807c8cf1dd7362a531f321f9f756e82d1
+ test existence of m_pImpl for FormulaDlg::PreNotify

Change-Id: I580aa7be79e1743fc528fd414a0ae581c0cb0c87